--- a/ws.html
+++ b/ws.html
@@ -7,7 +7,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script>
     //var ws = new WebSocket('ws://localhost:40510');
-    var ws = new WebSocket('ws://localhost:40510');
+    var ws = new WebSocket('wss://websocketkkt.herokuapp.com:40510');
 
     $(function () {
 
